--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "pretty-bytes": "^3.0.0",
     "promise": "^7.1.1",
     "then-request": "^2.2.0",
-    "uglify-js": "^2.7.0"
+    "uglify-es": "^3.1.5"
   },
   "devDependencies": {
     "linify": "~1.0.1"
