--- a/package.json
+++ b/package.json
@@ -11,17 +11,16 @@
   "license": "MIT",
   "dependencies": {
     "barrage": "^1.0.0",
-    "chalk": "^1.1.0",
-    "cheerio": "^0.22.0",
-    "clean-css": "^3.4.19",
+    "chalk": "^2.3.0",
+    "cheerio": "^1.0.0-rc.2",
+    "clean-css": "^4.1.9",
     "css": "^2.1.0",
     "cssdeps": "^1.0.0",
-    "figures": "^1.3.3",
+    "figures": "^2.0.0",
     "htmldeps": "^1.1.0",
     "mkdirp": "^0.5.1",
-    "pretty-bytes": "^3.0.0",
-    "promise": "^7.1.1",
-    "then-request": "^2.2.0",
+    "pretty-bytes": "^4.0.2",
+    "then-request": "^4.1.0",
     "uglify-es": "^3.1.5"
   },
   "devDependencies": {
